--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-29 21:46:05
+lastsearch = 2024-07-30 01:19:11
 
 [demxanh.com]
 match = 25.9%%
 title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html?srsltid=AfmBOoo35arw4NW4UcNHxU0Ar3dTJHqkzo-a8Xc4k2mVg6nRgKVIIS1m
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [goni.vn]
 match = 14.8%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Kh
 [foreverbedding.net]
 match = -59.3%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOooi7JUtCRiixKm7kfiQF80FX8bYGDPQIE8eFziPaVooKBQXLTxo
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOoqSII0DiqOsl5IOyMnIssx2rQ1X9FOQ6J-um0nduQA6fMke2eAk
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
 [chieutrelinhchi.com]
 match = 0.0%%
