--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-29 23:52:40
+lastsearch = 2024-07-30 01:25:46
 
 [www.gov.uk]
 match = -200.0%%
@@ -702,9 +702,9 @@ title =
 url = https://m.youtube.com/watch?v=RmrUILNxii0
 
 [www.facebook.com]
-match = 0.0%%
-title = Barack Obama
-url = https://www.facebook.com/barackobama/
+match = -7.7%%
+title = Ozzy Osbourne
+url = https://www.facebook.com/ozzyosbourne/
 
 [egov.uscis.gov]
 match = -113.3%%
@@ -837,9 +837,9 @@ title = Boston 25 News
 url = https://www.boston25news.com/homepage
 
 [publicaccess.courts.state.mn.us]
-match = -166.7%%
-title = Minnesota Court Records Online (MCRO): Home Page
-url = https://publicaccess.courts.state.mn.us/
+match = 0.0%%
+title = 
+url = https://publicaccess.courts.state.mn.us/CaseSearch
 
 [thepowerrank.com]
 match = 0.0%%
@@ -1085,4 +1085,19 @@ url = https://www.deepl.com/
 match = -146.7%%
 title = Chevron Corporation - Human Energy — Chevron
 url = https://www.chevron.com/
+
+[www.ucdavis.edu]
+match = -100.0%%
+title = UC Davis | California's College Town
+url = https://www.ucdavis.edu/
+
+[arb.umn.edu]
+match = -86.7%%
+title = Minnesota Landscape Arboretum: Home
+url = https://arb.umn.edu/
+
+[www.santamonica.gov]
+match = -46.7%%
+title = santamonica.gov - Home Page
+url = https://www.santamonica.gov/
 
