--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-29 16:47:16
+lastsearch = 2024-07-30 01:23:43
 
 [www.instagram.com]
-match = -223.1%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+match = -92.3%%
+title = Hoi Chan (@hoichandraws) - Instagram
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [hk.linkedin.com]
-match = -215.4%%
-title = Vincy Chan - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/vincy-chan-982992221
+match = -276.9%%
+title = Chow hoi ting Chow - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
 
 [wwd.com]
 match = -253.8%%
