--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-29 22:28:26
+lastsearch = 2024-07-30 01:28:08
 
 [dongagroup.vn]
 match = -272.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -281.8%%
-title = Ván đầu giường màu trắng gần Grand Rapids, Minnesota
-url = https://www.facebook.com/marketplace/113181078692492/white-headboards-footboards/?locale=vi_VN
+match = -272.7%%
+title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
