--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-29 21:31:11
+lastsearch = 2024-07-30 01:17:30
 
 [www.tui.co.uk]
-match = -20.0%%
-title = Inflight Entertainment
-url = https://www.tui.co.uk/info/inflight-entertainment
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -17,8 +17,8 @@ title =
 url = https://www.travelgossip.co.uk/latestnews/marella-cruises-cancels-winter-2024-25-asia-and-middle-east-programme/
 
 [www.flightaware.com]
-match = -140.0%%
-title = Estado de vuelos de TUI Airways en tiempo real
+match = -60.0%%
+title = Live TUI Airways Flight Status
 url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
@@ -77,9 +77,9 @@ title = Marella Cruises in Asia, sailing from Singapore
 url = https://www.southamptoncruisecentre.com/latest-news/marella-cruises-to-asia-with-dreamliner-to-singapore/
 
 [www.tuigroup.com]
-match = -213.3%%
-title = TUI Group – The one of the world's leading tourism groups
-url = https://www.tuigroup.com/en-en
+match = -233.3%%
+title = World's leading tourism business TUI Group set to grow in ...
+url = https://www.tuigroup.com/en-en/media/press-releases/2015/20151125-worlds-leading-tourism-business-tui-group-set-to-grow-in-south-east-asia
 
 [www.seascanner.com]
 match = -140.0%%
@@ -87,8 +87,8 @@ title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -180.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
+match = -220.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
