CI images update

--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-29 23:37:17
+lastsearch = 2024-07-30 01:41:57
 
 [bedding.vn]
 match = -123.1%%
@@ -47,8 +47,8 @@ title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
 url = https://hanvico.com.vn/
 
 [demthienkim.com]
-match = -123.1%%
-title = Chăn ga gối Sông Hồng Urban mã mầu UC16
+match = -246.2%%
+title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [foreverbedding.net]
@@ -107,9 +107,9 @@ title = Ga chun - Chăn ga gối đệm Phương Bắc
 url = https://changagoidemphuongbac.com/ga-chun/
 
 [profiles.ucsd.edu]
-match = -69.2%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -7.7%%
+title = Catriona Jamieson
+url = https://profiles.ucsd.edu/catriona.jamieson
 
 [www.mtech.edu]
 match = -61.5%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -261.5%%
-title = Expert Profile: Je Hyeong Bahk - UC Research Directory
-url = https://researchdirectory.uc.edu/p/bahkjg
+match = -246.2%%
+title = Expert Profile: James Herman - UC Research Directory
+url = https://researchdirectory.uc.edu/p/hermanjs
 
 [thegioinem.com]
 match = -230.8%%
@@ -385,4 +385,9 @@ url = https://en.wikipedia.org/wiki/Washington_Huskies
 match = -130.8%%
 title = Meet the Staff | Data Science at NIH
 url = https://datascience.nih.gov/about/staff
+
+[www.sdmesa.edu]
+match = -138.5%%
+title = Open Courses | Crash List | Fall 2024
+url = https://www.sdmesa.edu/open-courses/
 
