--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-29 21:42:20
+lastsearch = 2024-07-30 01:44:24
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh ngọc
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A114 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a114
+match = -61.1%%
+title = Bộ ga phủ Melody M214 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-melody-m214
 
 [aeoneshop.com]
 match = -105.6%%
@@ -107,9 +107,9 @@ title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
-match = -127.8%%
-title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
+match = -116.7%%
+title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
 
 [everonhanquoc.vn]
 match = -22.2%%
