--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-29 22:17:08
+lastsearch = 2024-07-30 01:46:13
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
-match = -141.2%%
-title = anyone know how to find who the HOA president is? ...
-url = https://www.reddit.com/r/fuckHOA/comments/10lkjnf/anyone_know_how_to_find_who_the_hoa_president_is/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [spectrumam.com]
 match = -76.5%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -176.5%%
-title = Can my HOA fine me if they haven't explained what I've ...
-url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
+match = -200.0%%
+title = My neighbor is constantly doing things that violate our HOA ...
+url = https://www.quora.com/My-neighbor-is-constantly-doing-things-that-violate-our-HOA-agreement-what-can-I-do
 
 [www.hopb.co]
 match = -141.2%%
@@ -505,4 +505,9 @@ url = https://www.montgomerycountymd.gov/dep/resources/files/trash-recycling/hol
 match = -105.9%%
 title = Responsible Utility Customer Protection Act
 url = https://www.puc.pa.gov/general/consumer_ed/pdf/Act201-Water.pdf
+
+[www.azoca.gov]
+match = 0.0%%
+title = 
+url = https://www.azoca.gov/resources/faqs/open-meetings-law-faq/
 
