--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-30 00:45:57
+lastsearch = 2024-07-30 01:40:13
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOormc_eB7lN-yzAIw3zjT2rm85gdCThXpESQMmmF0C_2_f35FP9T
 
 [shopee.vn]
 match = -105.0%%
@@ -24,12 +24,12 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/
+url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOooe7XNqNbjdhd0tjEG3_pxK4wlnG1I8fW6s1dkzqHFUYs6jkuPR
 
 [www.lazada.vn]
 match = -5.0%%
 title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOorN7myZAvM-tnvaLah9HEyewtM-9ewFbohJAx4eaHJ_jaJY4vxM
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -104,7 +104,7 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOoqbGhk9RIJP3yvOPGsAAYg254KHIcGNSIpTDZMxbdF9ngXgyarl
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
@@ -239,7 +239,7 @@ url = https://www.kymdan.com/danh-muc/giuong-sat-xep-di-dong
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 18 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html?srsltid=AfmBOoqfnCUsNUzck0Ue4Z2Dot1Kax_2fhZFmJkQxBJrCLFeni4iZHHa
 
 [giuonggapvietnhat.vn]
 match = -50.0%%
