--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-29 23:40:29
+lastsearch = 2024-07-30 01:37:46
 
 [www.tui.co.uk]
 match = 0.0%%
@@ -12,8 +12,8 @@ title = Buy South Korean won
 url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
