CI images update

--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-30 00:40:32
+lastsearch = 2024-07-30 02:01:33
 
 [www.diepxuan.com]
 match = 5.3%%
@@ -12,9 +12,9 @@ title = Túi nệm - Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
-match = 0.0%%
-title = 
-url = https://www.tui.co.uk/destinations/info/dreamliner
+match = -58.3%%
+title = Where We Fly | Flights with TUI 2024 / 2025
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [www.seatrade-cruise.com]
 match = -100.0%%
