--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-29 22:49:13
+lastsearch = 2024-07-30 01:51:21
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22004
-url = https://www.everonvn.vn/chi-tiet/everon-esm22004.html
+match = -87.5%%
+title = Everon ESC-22020 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esc22020.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = Chăn ga gối Sông Hồng Cao Cấp Urban UC22 024
 url = https://thegioinem.com/chan-ga-goi-song-hong-cao-cap-urban-uc22-024.html
 
 [shopee.vn]
-match = -54.2%%
-title = Bộ chăn ga gối Cotton Đũi 5 món phong cách Hàn Quốc ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-Cotton-Đũi-5-món-phong-cách-Hàn-Quốc-mẫu-mới-2022-Ga-giường-vỏ-gối-chăn-hè-chất-đũi-thoáng-mát-không-xù-i.230538458.7132670880
+match = -83.3%%
+title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [everonletrongtan.com]
 match = 31.8%%
@@ -95,4 +95,19 @@ url = http://www.changagoidemeveron.vn/3/everon/bo-chan-ga-everon-esb-22051-2022
 match = 8.3%%
 title = Bảng báo giá Bộ Everon ESB-22051
 url = https://everonmienbac.vn/bo-everon-esb-22051/
+
+[www.lazada.vn]
+match = -66.7%%
+title = HOT Bộ ga gối cotton poly nhiều mẫu ( ib chọn mẫu)còn hàng
+url = https://www.lazada.vn/products/hot-bo-ga-goi-cotton-poly-nhieu-mau-ib-chon-maucon-hang-i1433419140-s5934168211.html?from_gmc=1&fl_tag=1
+
+[www.sendo.vn]
+match = -33.3%%
+title = BỘ CHĂN GA GỐI COTTON POLY RỪNG XANH MỚI SET 5 MÓN
+url = https://www.sendo.vn/bo-chan-ga-goi-cotton-poly-rung-xanh-moi-set-5-mon-11176307.html
+
+[m.facebook.com]
+match = -26.7%%
+title = Nam phuong.shop
+url = https://m.facebook.com/p/Nam-phuongshop-100023919678729/
 
