--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-29 23:46:08
+lastsearch = 2024-07-30 02:01:54
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -176.5%%
-title = Malaysian Society of Gastroenterology and Hepatology ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9303255/
+match = -164.7%%
+title = Estrogenic Modulation of Ionic Channels, Pumps and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10178541/
 
 [books.google.com]
 match = -200.0%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -200.0%%
-title = Qisliq badimcani birde bu cur hazirlayin❗ SUPER RESSEPT ...
-url = https://www.youtube.com/watch?v=kIjdg0j4tA4
+match = 27.3%%
+title = Chan's Song
+url = https://www.youtube.com/watch?v=sx07d0FcFDo
 
 [www.tiktok.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -176.5%%
-title = How much do you know about each member of the Korean ...
-url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
+match = -147.1%%
+title = Can someone introduce me to a K-pop group named ...
+url = https://www.quora.com/Can-someone-introduce-me-to-a-K-pop-group-named-ATEEZ-Ateez-I-heard-their-song-Answer-and-I-like-it-I-think-Im-going-to-be-a-new-fan
 
 [msaniimusicgroup.org]
 match = 0.0%%
@@ -260,4 +260,14 @@ url = https://www.science.org/doi/abs/10.1126/sciadv.adn5028?mi=0&af=R&target=de
 match = -205.9%%
 title = Accelerating precision anti-cancer therapy by time-lapse ...
 url = https://www.thno.org/v11p9415.htm
+
+[stray-kids.fandom.com]
+match = 0.0%%
+title = 
+url = https://stray-kids.fandom.com/wiki/Bang_Chan
+
+[www.nature.com]
+match = -158.8%%
+title = The 5th edition of the World Health Organization ...
+url = https://www.nature.com/articles/s41375-022-01620-2
 
