--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-30 01:24:23
+lastsearch = 2024-07-30 01:56:57
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -260,4 +260,9 @@ url = http://nimpe.vn/userfiles/file/DaotaoSDH/2020/NCS Hòa/Luan_an_Doan_Thuy_H
 match = -28.6%%
 title = ĐÁNH GIÁ KẾT QUẢ PHẪU THUẬT NỘI SOI ĐIỀU TRỊ U ...
 url = https://www.slideshare.net/slideshow/bqtppt0111/47364367
+
+[muce.edu.vn]
+match = -12.5%%
+title = game di tam bien
+url = https://muce.edu.vn/android/game-di-tam-bien/
 
