--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-29 21:45:44
+lastsearch = 2024-07-30 01:58:03
 
 [zhangbrickshop.com]
 match = -133.3
@@ -57,9 +57,9 @@ title = Xác định hàm lượng vitamin D2 từ một số loài nấm lớn 
 url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 
 [m.facebook.com]
-match = -193.3%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP. ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2400389277008204/
+match = -220.0%%
+title = Vitamin D2 - Sữa Hạt Xanh Organic - Mồng 1 đầu tháng ...
+url = https://m.facebook.com/D2Organic/photos/mồng-1-đầu-tháng-chúc-tất-cả-mọi-người-cầu-mong-ai-cũng-an-lành-sám-hối-tu-sửa-t/475225461683274/
 
 [dkv.biz.vn]
 match = -166.7%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -133.3%%
+title = Vitamin D2+K3 Lineabon tăng chiều cao cho bé
+url = https://shopee.vn/Vitamin-D2-K3-Lineabon-tăng-chiều-cao-cho-bé-i.230152250.24018506156
 
 [uspharma.vn]
 match = -20.0%%
@@ -357,8 +357,8 @@ title = Mông địa Thiên To
 url = https://sienergie.fr/4291517-mông-to-địa-thiên.html
 
 [www.vietnamairport.vn]
-match = -213.3%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
+match = -240.0%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [vattumientay.com]
