--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-29 23:47:08
+lastsearch = 2024-07-30 01:44:24
 
 [demxanh.com]
 match = -94.1%%
 title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
-url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html?srsltid=AfmBOoruHD7MNeajlMaGYgf0HcqRm1iVw8kUZGNmorTtkJSej5a22Yjp
+url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
 match = -58.8%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
 url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
-match = 47.1%%
-title = chiếu trúc hạt nâu đen
-url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
+match = -188.2%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
 
 [www.diepxuan.com]
 match = -64.7%%
