--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-29 21:32:11
+lastsearch = 2024-07-30 01:59:47
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -29,12 +29,12 @@ url = https://tiki.vn/search?q=chiếu trúc
 [demxanh.com]
 match = -9.7%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorbxsBW-PefhN4xZAwCq852RzCCsue1aM9hTNGkENIjeq9oHjyM
+url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 3.2%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117250267.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721952000324_undefined_-1_cateLvl2_0_89_23_-1
+match = -3.2%%
+title = Chiếu Trúc Hạt Quế Lâm kích thước 2m2x2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-2m2x2m-duo-c-kie-m-ha-ng-18050806-117250489.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722038400324_undefined_-1_cateLvl2_0_69_23_-1
 
 [www.lazada.vn]
 match = 16.1%%
