--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-29 21:39:08
+lastsearch = 2024-07-30 01:54:07
 
 [shopee.vn]
-match = -36.0%%
-title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
-url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
+match = -12.0%%
+title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
 
 [munghoangphat.com]
-match = -36.0%%
-title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
-url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = Màn đỉnh vuông hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
-match = -52.0%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -12.0%%
+title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
+url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
 
 [manthutrang.com]
 match = -40.0%%
