--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-29 14:28:03
+lastsearch = 2024-07-30 01:57:42
 
 [www.instagram.com]
-match = -50.0%%
-title = NEM Furniture JSC (@nemfurniturejsc)
-url = https://www.instagram.com/nemfurniturejsc/?hl=en
+match = -144.4%%
+title = Thùy Ngân (@huuloc861) • Instagram photos and videos
+url = https://www.instagram.com/huuloc861/
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOoppkDWW7_NL1uxHKLqk4Ulq3PJMDUTE1ZZdZGgkF-9RbeW-9-x_
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
 match = -105.6%%
@@ -39,7 +39,7 @@ url = https://www.proz.com/profile/2092720
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOor-Z-lRlEF_ypXhDaYn_C46W9QQGuYwPSi9qupgIsPKwe0uF4mT
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
 match = -177.8%%
