--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -109,7 +109,7 @@ url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOoqbGhk9RIJ
 [giuongbenhbaominh.vn]
 match = -95.0%%
 title = Top 10 mẫu giường xếp có nệm giá rẻ tốt nhất năm 2020
-url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat
+url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat?srsltid=AfmBOort1VX9FMnQ9w-aDAmgeLBATuuNxhm-Wjy03NavUjWDxZuVfrTg
 
 [theonenoithat.com]
 match = -30.0%%
