--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-30 00:38:26
+lastsearch = 2024-07-30 01:47:31
 
 [shopee.vn]
-match = -123.8%%
-title = Giường Bumper Bed Bảo Vệ Bé Yêu An Toàn Yên Tâm Vui ...
-url = https://shopee.vn/Giường-Bumper-Bed-Bảo-Vệ-Bé-Yêu-An-Toàn-Yên-Tâm-Vui-Chơi-Phát-Triển-Thương-hiệu-Dono-Dono-Hàn-Quốc-i.739965304.21859208735
+match = -100.0%%
+title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
+url = https://shopee.vn/Thảm-chiếu-đa-năng-trải-sàn-trải-giường-loại-mỏng-dùng-4-mùa.-tấm-trải-nệm-mỏng-i.78513158.10635430597
 
 [cafeland.vn]
 match = -100.0%%
