CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-30 01:21:38
+lastsearch = 2024-07-30 02:21:59
 
 [tiki.vn]
 match = 16.0%%
@@ -44,7 +44,7 @@ url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 [books.google.com]
 match = -96.0%%
 title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=pp6aAAAAIAAJ&pg=RA3-PA70&lpg=RA3-PA70&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=6evoMK9Qwp&sig=ACfU3U2trch_VB45gOmx49DKcBOnecwn8A&hl=en&sa=X&ved=2ahUKEwiyufn07syHAxXvF1kFHXRIEMQQ6AF6BAgYEAM
+url = https://books.google.com/books?id=pp6aAAAAIAAJ&pg=RA3-PA70&lpg=RA3-PA70&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=6evoML2Xop&sig=ACfU3U2YvehvYupHeW9fCHyJ-vzytbutnw&hl=en&sa=X&ved=2ahUKEwjpoJqz_MyHAxWWGFkFHfl3Gv0Q6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
 match = -52.0%%
