--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-29 23:53:23
+lastsearch = 2024-07-30 02:17:31
 
 [suongtuyet.com]
 match = 16.0%%
@@ -19,7 +19,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOor7gwoSVEPGQD65e1K_e8UFWOqDLfuhGFEptVxc_ihvLy1DPjOD
 
 [shopee.vn]
 match = 43.5%%
@@ -49,7 +49,7 @@ url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOopydiY87eHPuGyk7LZcpJl_rEzaEkXpnt8k2Y8K3P80yYycingn
 
 [bedding.vn]
 match = -76.0%%
