--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-30 01:23:43
+lastsearch = 2024-07-30 02:12:59
 
 [www.instagram.com]
-match = -92.3%%
-title = Hoi Chan (@hoichandraws) - Instagram
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -161.5%%
+title = (@katrinacyt) • Instagram photos and videos
+url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
 match = -276.9%%
