--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-29 23:18:31
+lastsearch = 2024-07-30 02:12:19
 
 [chieutruc.info]
 match = -60.0%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOooyzLUZd1LCx93DLBCwfMYbCTd1HDH2wtc7ocqofd-vJq4buEZG
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [shopee.vn]
 match = -64.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc Cao Bằng Hàng Xuất Khẩu Dùng Liệu Có tốt?
 url = https://www.youtube.com/watch?v=sGb4V5EQcww
 
 [chieutrucsaigon.com]
-match = -4.0%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 44.0%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [hanggiadunghatinh.com]
 match = 40.0%%
