--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-29 21:14:43
+lastsearch = 2024-07-30 02:16:49
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgkNFpq8&sig=ACfU3U30SxnARrCLeivX8ZAvm4TPfuYe3w&hl=en&sa=X&ved=2ahUKEwirhqTct8yHAxVfDDQIHXpNA3gQ6AF6BAgpEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgkPDrie&sig=ACfU3U36bpr_tSG2e8gqe-dTyDWmi2uL5A&hl=en&sa=X&ved=2ahUKEwiuksCf-8yHAxWVMlkFHafLC9cQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
