--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-29 21:45:26
+lastsearch = 2024-07-30 02:57:24
 
 [www.instagram.com]
-match = -246.2%%
-title = Yuki Chan (@yukichan_la) • Instagram photos and videos
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -107.7%%
+title = Hoi Chan (@hoichandraws) - Instagram
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -107.7%%
-title = Yuki Chan - Hong Kong, Hong Kong SAR
-url = https://hk.linkedin.com/in/yuki-y-chan?trk=public_profile_samename-profile
+match = 0.0%%
+title = Yuki Chan - FORMIA
+url = https://hk.linkedin.com/in/yuki-chan-aa4102166
 
 [www.eduhk.hk]
 match = -200.0%%
@@ -117,8 +117,8 @@ title = Team
 url = https://www.5plusdesign.com/team
 
 [www.scmp.com]
-match = -223.1%%
-title = Meet the HKU graduate making vegan treats to ...
+match = -300.0%%
+title = Meet the HKU graduate making vegan treats to promote a ...
 url = https://www.scmp.com/yp/discover/news/hong-kong/article/3057691/meet-hku-graduate-making-vegan-treats-promote-plant
 
 [mutualpublishing.com]
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
