--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-30 02:23:02
+lastsearch = 2024-07-30 02:50:36
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,9 +92,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 10 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-lac-d2-10.html
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 10
+url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOopjyfDHo6IqnDO5-OeEA_-4np4Ey3Gg_ye0bx1GEbSBtnLILOBO
 
 [visana.vn]
 match = -240.0%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Du học Hàn Quốc - ANIDO
-url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [hoc247.vn]
 match = -213.3%%
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOoqSpimS137yuBUeXzlWnVQcRMrD9mmbS2FJbaRwIWUBpm53Bphr
 
 [www.nhathuocankhang.com]
 match = -220.0%%
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOooUiIE81-PeBh50rK755Ul2waUhlR3b27UxotTx33EtaJi4h_lZ
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
