--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-30 02:21:38
+lastsearch = 2024-07-30 02:48:49
 
 [shopee.vn]
-match = -171.4%%
-title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
-url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
+match = -214.3%%
+title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
 
 [mungthienmetta.com]
 match = -185.7%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -142.9%%
-title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
+match = -128.6%%
+title = LUKA 18 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.18.MIZCLBSI
 
 [mungchup.com]
 match = -164.3%%
@@ -107,9 +107,9 @@ title = Màn Mùng chụp tự bung Kiều Phi - Bảo Hành 18 tháng
 url = https://www.facebook.com/groups/manchuptubung/
 
 [www.churchofjesuschrist.org]
-match = -28.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -278.6%%
+title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
