--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-30 02:26:11
+lastsearch = 2024-07-30 02:45:43
 
 [www.lazada.vn]
 match = -94.4%%
@@ -27,14 +27,14 @@ title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
 url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [www.facebook.com]
-match = -150.0%%
-title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
-url = https://www.facebook.com/sieuthinem267/
+match = -155.6%%
+title = Vietnamese Community of Oregon - VNCO.org | Portland OR
+url = https://www.facebook.com/vncousa/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -111.1%%
-title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
-url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
+match = -38.9%%
+title = Chao Recipe Vietnamese Meatball
+url = https://www.tiktok.com/discover/chao-recipe-vietnamese-meatball
 
 [vi.wikipedia.org]
 match = -27.8%%
