--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-07-30 02:39:07
+lastsearch = 2024-07-30 02:51:19
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOooM3D6KkJh2cjoAKv-C6sbtsDNym6k_4SjP_rxNZNkA6fdhVtKL
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.amazon.com]
 match = -50.0%%
