CI images update

--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-30 01:28:50
+lastsearch = 2024-07-30 03:19:54
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -325,4 +325,9 @@ url = https://vivo.brown.edu/display/ybazilev
 match = -25.0%%
 title = 19-Mar-69 : Phu-Loc (6)
 url = https://www.grunt.com/blogs/news/19-mar-69-phu-loc-6
+
+[espndeportes.espn.com]
+match = -300.0%%
+title = posiciones de Básquetbol Colegial Masculino - 2023-24
+url = https://espndeportes.espn.com/basquetbol/colegial-hombres/posiciones
 
