--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-29 22:28:47
+lastsearch = 2024-07-30 03:17:47
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -59.3%%
-title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -37,9 +37,9 @@ title = Kinh hoàng ruột gối siêu rẻ đen ngòm
 url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a127941.html
 
 [shopee.vn]
-match = -22.2%%
-title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
+match = -85.2%%
+title = Vỏ gối cotton tici size 40 x 60, 50 x 70cm, Bọc gối giá rẻ, áo ...
+url = https://shopee.vn/Vỏ-gối-cotton-tici-size-40-x-60-50-x-70cm-Bọc-gối-giá-rẻ-áo-gối-không-khoá-kéo-i.474851145.13797097797
 
 [demxanh.com]
 match = -44.4%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -44.4%%
-title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+match = 25.9%%
+title = Gối & Vỏ Gối (Có 85 sản phẩm)
+url = https://dienmaycholon.com/goi-vo-goi
 
 [metruyen.me]
 match = 33.3%%
