--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-30 00:40:53
+lastsearch = 2024-07-30 03:30:14
 
 [www.diepxuan.com]
 match = 3.6%%
 title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-mau.html
+url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOorHNXYBDnYguPkS1on2TXL3jRZszn-sIKkfefXaUuL042j6VLbA
 
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOopO8AhXHqBXXgqBNlzZbulHXyBRmBtUoRsJFXcyp24Dcir--VAo
 
 [shopee.vn]
 match = -7.1%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-
 [foreverbedding.net]
 match = -32.1%%
 title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOopd4Guu2UDatSk8B1WU83JC7O1SWCCX98IjXQ4D_q3n_SRg603t
 
 [changagoidemsonghong.com]
 match = 17.9%%
@@ -52,9 +52,9 @@ title = 27 Bộ Chăn Ga Gối Đệm Phòng Cưới Sang Xịn Mịn Với Giá
 url = https://cuahangchangagoidem.com/chan-ga-goi-dem-phong-cuoi/
 
 [goni.vn]
-match = 7.1%%
-title = Bộ chăn mền ga gối Goni tici màu cam xám
-url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-cam-xam/
+match = 14.3%%
+title = Bộ chăn mền ga gối Goni tici màu xám
+url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-xam/
 
 [ru9.vn]
 match = -25.0%%
