--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-29 23:50:56
+lastsearch = 2024-07-30 03:23:00
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -27,9 +27,9 @@ title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
 url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
-match = -87.0%%
-title = 03/TBDG-QP Trung tam Djch vi du giá tài san tinh Thai ...
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20230201/TBNY_so___03_Hd09-2022_QSD_da__t_xa___An_Du__c__huye__n_Quy__nh_Phu____ti__nh_Tha__i_Bi__nh_a9c32.pdf
+match = 17.4%%
+title = THÔNG BAO DAU GIA TAI SAN Qn 10)
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
 
 [www.youtube.com]
 match = 26.1%%
