--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-30 00:34:33
+lastsearch = 2024-07-30 03:27:51
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -193.8%%
-title = #58.Hướng Dẫn Cách Lắp Bảng Lề Xoay | Cửa Cổng Cho Ai ...
-url = https://www.youtube.com/watch?v=JXckUMr9AoA
+match = -218.8%%
+title = Chiêu trò cùm nhíp chống sốc và thanh giằng cân bằng chống ...
+url = https://www.youtube.com/watch?v=wZdbzOkTME0
 
 [saigontourist.edu.vn]
 match = -162.5%%
