--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-30 02:33:36
+lastsearch = 2024-07-30 03:23:21
 
 [www.everonvn.vn]
-match = -61.5%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = 70.8%%
+title = Đệm lò xo Everon Posture
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Posture.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -17,9 +17,9 @@ title = Điệp Xuân Nệm lò xo Everon Pocket 18
 url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 
 [everon.online]
-match = -26.9%%
-title = Bảng Giá Đệm Lò Xo Everon, Đệm Lò Xo Mỹ King Koil ...
-url = https://everon.online/collections/dem-lo-xo-everon
+match = -42.3%%
+title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
+url = https://everon.online/collections/dem-everon
 
 [demchinhhang.com]
 match = 80.8%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = -53.8%%
-title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
-url = https://nemhana.com/nem-everon/
+match = 11.5%%
+title = Nệm lò xo King Koil Pocket Firm - Nệm Hana
+url = https://nemhana.com/nem-lo-xo-king-koil-pocket-firm/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
