--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-29 21:50:20
+lastsearch = 2024-07-30 04:31:44
 
 [demxanh.com]
 match = 26.3%%
@@ -32,9 +32,9 @@ title = Bang Chan vibing to cool music while his computer kinda ...
 url = https://www.youtube.com/watch?v=rezmW8IDkRk
 
 [phongkhongkhongquan.vn]
-match = -82.6%%
-title = Tiểu đoàn Căn cứ Sân bay Nà Sản khắc phục khó khăn ...
-url = https://phongkhongkhongquan.vn/28375/tieu-doan-can-cu-san-bay-na-san-khac-phuc-kho-khan-tang-gia-chan-nuoi-tot.html
+match = -60.9%%
+title = Hiệu quả mô hình chăn nuôi bò ở Trạm Ra đa 35
+url = https://phongkhongkhongquan.vn/26553/hieu-qua-mo-hinh-chan-nuoi-bo-o-tram-ra-da-35.html
 
 [tamanhhospital.vn]
 match = -108.7%%
@@ -162,9 +162,9 @@ title = CHẨN ĐOÁN VÀ ĐIỀU TRỊ SỐT XUẤT HUYẾT DENGUE
 url = https://nhidong.org.vn/Data/bvnhidong/bvnhidong/Attachments/2018_12/PHP06/chan_doan_va_dieu_tri_sxh_2018_-_can_tho_1412201813.pdf
 
 [www.addgene.org]
-match = -78.3%%
-title = M51 Super 8x FOPFlash (TOPFlash mutant) Citations
-url = https://www.addgene.org/12457/citations/
+match = -13.0%%
+title = M50 Super 8x TOPFlash Citations
+url = https://www.addgene.org/12456/citations/
 
 [www.rss.hku.hk]
 match = -25.0%%
