CI images update

--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-30 04:23:11
+lastsearch = 2024-07-30 04:44:43
 
 [www.zillow.com]
 match = -69.2%%
@@ -152,8 +152,8 @@ title = Jacq Gani (@gainswithjacq) • Instagram photos and videos
 url = https://www.instagram.com/gainswithjacq/?hl=en
 
 [www.mariettaga.gov]
-match = -38.5%%
-title = Marietta Power & Water
+match = -84.6%%
+title = Power & Water | Marietta, GA
 url = https://www.mariettaga.gov/1503/Power-Water
 
 [www.kff.org]
@@ -630,4 +630,14 @@ url = https://www.gsu.edu/
 match = -276.9%%
 title = Current status of white coat hypertension: where are we?
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7318827/
+
+[www.yelp.com]
+match = 0.0%%
+title = 
+url = https://www.yelp.com/brands/stretchlab
+
+[www.farmers.gov]
+match = -238.5%%
+title = How to Start a Farm: Beginning Farmers and Ranchers
+url = https://www.farmers.gov/your-business/beginning-farmers
 
