--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-30 04:14:28
+lastsearch = 2024-07-30 04:53:43
 
 [demxanh.com]
-match = 28.0%%
-title = Chăn ga gối Singapore lụa
-url = https://demxanh.com/chan-ga-goi-singapore-lua.html
+match = 20.7%%
+title = Chăn ga gối Singapore Pyeoda Skysilk 5 món 14
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-skysilk-5-mon-14.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = -17.2%%
-title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
+match = 51.7%%
+title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
 
 [changagoinemgiasi.com]
 match = 3.4%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeo
 [thegioidemonline.com]
 match = 34.5%%
 title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOopCNK_lUYyoc-1bDtseWEdoitfO4nHe2WLvJ8dngH290x2J-N2B
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
 
 [dem4mua.vn]
 match = 6.9%%
@@ -47,9 +47,9 @@ title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [www.facebook.com]
-match = -27.8%%
-title = Đệm Xanh Bắc Giang
-url = https://www.facebook.com/demxanh.308bacgiang/?locale=nl_BE
+match = 28.0%%
+title = Chăn Ga Gối Đệm Singapore
+url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
 
 [changagoidemdep.vn]
 match = 3.4%%
