--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-29 21:48:12
+lastsearch = 2024-07-30 04:46:50
 
 [demxanh.com]
-match = 24.1%%
-title = Chiếu điều hòa cao su non đa sắc xám hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
+match = 27.6%%
+title = Chiếu điều hòa cao su non Tencel vàng chanh
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
 
 [tiki.vn]
 match = 20.7%%
