--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-30 02:15:41
+lastsearch = 2024-07-30 04:57:15
 
 [shopee.vn]
-match = -21.4%%
-title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
+match = 14.3%%
+title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
 
 [chieutrelanlan.com]
 match = 19.0%%
