--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-30 01:23:22
+lastsearch = 2024-07-30 04:52:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -226.7%%
-title = Giao Lưu Livestream Chiều 18.07 | PURA BILLIARDS - Giao ...
-url = https://www.facebook.com/purabilliards/videos/giao-lưu-livestream-chiều-1807/1207721590543543/
+match = -180.0%%
+title = Bệnh Viện Hoàn Mỹ Minh Hải - NỘI SOI LẤY DỊ VẬT ...
+url = https://www.facebook.com/photo.php?fbid=732691348858537&id=100063530351491&set=a.536813015113039&locale=is_IS
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -117,9 +117,9 @@ title = Compliance
 url = https://corporate.lacoste.com/compliance/
 
 [www.tsttourist.com]
-match = -160.0%%
-title = TRUNG QUỐC: THÀNH ĐÔ - CỬU TRẠI CÂU - LẠC SƠN ...
-url = https://www.tsttourist.com/vn/trung-quoc-thanh-do-cuu-trai-cau-lac-son-dai-phat-TSTOBCN25-TSTOBCN25-14092024-3U.html
+match = -113.3%%
+title = HÀNH TRÌNH KHÁM PHÁ TỨ XUYÊN: THÀNH ĐÔ
+url = https://www.tsttourist.com/vn/hanh-trinh-kham-pha-tu-xuyen-thanh-do-cuu-trai-cau-lac-son-TSTOBCN37-TSTOBCN37-.html
 
 [www.coolmate.me]
 match = -200.0%%
