--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-30 02:26:51
+lastsearch = 2024-07-30 04:55:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -95.2%%
-title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
-url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
+match = -90.5%%
+title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
+url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -81.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -85.7%%
