--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-30 01:41:57
+lastsearch = 2024-07-30 04:56:34
 
 [bedding.vn]
 match = -123.1%%
@@ -47,8 +47,8 @@ title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
 url = https://hanvico.com.vn/
 
 [demthienkim.com]
-match = -246.2%%
-title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
+match = -123.1%%
+title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [foreverbedding.net]
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -246.2%%
-title = Expert Profile: James Herman - UC Research Directory
-url = https://researchdirectory.uc.edu/p/hermanjs
+match = -261.5%%
+title = Expert Profile: Je Hyeong Bahk - UC Research Directory
+url = https://researchdirectory.uc.edu/p/bahkjg
 
 [thegioinem.com]
 match = -230.8%%
