--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-07-30 03:18:32
+lastsearch = 2024-07-30 04:48:13
 
 [www.diepxuan.com]
 match = 28.6%%
 title = Điệp Xuân Vỏ gối kê màu 45x65
-url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html?srsltid=AfmBOoqK6w34bXaMMYb2lZ4pLFelQUgdO_eK6AfVmH7BM6HWJS1mOX_G
+url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
 
 [www.head-fi.org]
 match = 8.0%%
