CI images update

--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-29 20:41:00
+lastsearch = 2024-07-30 05:38:18
 
 [burningman.org]
 match = 0.0%%
 title = 
-url = https://burningman.org/about/10-principles/
+url = https://burningman.org/wp-content/uploads/BurningMan_Family_SurvivalGuide.pdf
 
 [www.usatoday.com]
 match = 0.0%%
