--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-30 04:30:42
+lastsearch = 2024-07-30 05:45:29
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -7.1%%
-title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
-url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
+match = 17.9%%
+title = Việc làm spa uy tín - Facebook
+url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -17.9%%
-title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
+match = -53.6%%
+title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -280,4 +280,9 @@ url = https://dungcudienchan.vn/danh-bat-nep-nhan-chi-voi-6-buoc-massage-don-gia
 match = -35.7%%
 title = Ziaja Med 15%% Urea Cream 100ml - Kem mềm da 15%% urê
 url = https://dalieuthuhien.vn/68/94/ziaja-med-15-urea-cream-100ml-kem-mem-da-15-ure.html
+
+[sti.vista.gov.vn]
+match = -76.9%%
+title = công nghệ gen
+url = https://sti.vista.gov.vn/Pages/ket-qua-nghien-cuu-moi-nhat.aspx?datasearch=[{"FieldSearch":"Keyword_Chinh","Keyword":"công+nghệ+gen","Operator":"AND"}]&Type_CSDL=KETQUANHIEMVU
 
