--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-30 04:45:44
+lastsearch = 2024-07-30 05:45:10
 
 [www.youtube.com]
-match = -72.7%%
-title = Xóm vắng 16
-url = https://www.youtube.com/watch?v=XQmlxXAh7D0
+match = -80.0%%
+title = Mỹ Nhân Thép - Tập 16 I Phim hay Tình cảm Đài Loan 2024 I ...
+url = https://www.youtube.com/watch?v=AFqS86AAQzc
 
 [www.voatiengviet.com]
 match = -92.0%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = -52.0%%
-title = VOA Tiếng Việt - Cảnh sát thành phố Đài Trung của ...
-url = https://www.facebook.com/VOATiengViet/posts/cảnh-sát-thành-phố-đài-trung-của-đài-loan-cho-biết-hôm-286-họ-đã-tìm-thấy-16-ngư/882921030539313/
+match = -124.0%%
+title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
 
 [baotintuc.vn]
 match = -72.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOopKeQ98_BjN4qIr7a3NpCcqkg4te82S_arUoBlCa8HO5zJGyf61
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
