--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-29 23:20:54
+lastsearch = 2024-07-30 05:41:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
 match = -187.5%%
-title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
+title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -52,9 +52,9 @@ title = Chiêu độc kích thích bưởi ra hoa, đậu quả I VTC16
 url = https://www.youtube.com/watch?v=MXwfPHbrM00
 
 [vi.wikipedia.org]
-match = -50.0%%
-title = Chân Lạc – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Chân_Lạc
+match = 7.7%%
+title = Cô dâu 8 tuổi
+url = https://vi.wikipedia.org/wiki/Cô_dâu_8_tuổi
 
 [www.lotteria.vn]
 match = 6.2%%
@@ -252,9 +252,9 @@ title = Sôi động cùng sự kiện Hiphop và nhảy Popping mùa 4
 url = https://daihoc.fpt.edu.vn/soi-dong-cung-su-kien-hiphop-va-nhay-popping-mua-4/
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -143.8%%
+title = Rạp Lotte Cantavil - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/lotte-cinema-cantavil/
 
 [batdongsan.com.vn]
 match = -200.0%%
