--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-30 04:46:29
+lastsearch = 2024-07-30 05:48:54
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -142.9%%
-title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDD0DqtAF&sig=ACfU3U0DVfKRqckbuMNcTcbC9ytEDK5EKQ&hl=en&sa=X&ved=2ahUKEwi3nrjZnM2HAxVAJkQIHU2DPG0Q6AF6BAgdEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCqczqqk&sig=ACfU3U0kfbFdG1fYrZAhnqcF2KLhb1Dnqg&hl=en&sa=X&ved=2ahUKEwjTpIrTqs2HAxVOEVkFHWOvCLIQ6AF6BAgbEAM
 
 [www.diepxuan.com]
 match = -81.0%%
