--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-30 02:17:31
+lastsearch = 2024-07-30 05:44:29
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -4.0%%
+title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
+url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
 
 [tuananh.vn]
 match = 8.0%%
@@ -19,7 +19,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOor7gwoSVEPGQD65e1K_e8UFWOqDLfuhGFEptVxc_ihvLy1DPjOD
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOooTXv1p8eN91sPv1bhZfR4hxPR8kRwx5WNvO1ie0bb51yzMjQ_E
 
 [shopee.vn]
 match = 43.5%%
@@ -49,7 +49,7 @@ url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOopydiY87eHPuGyk7LZcpJl_rEzaEkXpnt8k2Y8K3P80yYycingn
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOoo9sWOuS_x8hdsVMMwwoe7fiSulafZnB3riUk0BHI_1tRFdDR_w
 
 [bedding.vn]
 match = -76.0%%
