CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-30 04:20:45
+lastsearch = 2024-07-30 05:44:31
 
 [zhangbrickshop.com]
 match = -133.3
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOooUiIE81-PeBh50rK755Ul2waUhlR3b27UxotTx33EtaJi4h_lZ
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
