--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-30 02:57:24
+lastsearch = 2024-07-30 05:47:10
 
 [www.instagram.com]
-match = -107.7%%
-title = Hoi Chan (@hoichandraws) - Instagram
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -246.2%%
+title = Yuki Chan (@yukichan_la) • Instagram photos and videos
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -53.8%%
+title = 40+ "Hoi Yan Chan" profiles
+url = https://www.linkedin.com/pub/dir/Hoi+Yan/Chan
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -61.5%%
-title = Ichigeki Sacchu!! HoiHoi-san
-url = https://en.wikipedia.org/wiki/Ichigeki_Sacchu!!_HoiHoi-san
+match = -333.3%%
+title = 3X1
+url = https://en.wikipedia.org/wiki/3X1
 
 [nursing.hku.hk]
 match = -161.5%%
