--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-29 22:57:40
+lastsearch = 2024-07-30 05:49:38
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html?srsltid=AfmBOorkc7hbVtoNIMPQ8v8jb66efmxv_C4eI7jFdXooFrWYlaRAanzy
 
 [www.youtube.com]
 match = -128.6%%
@@ -57,9 +57,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [vi.wikipedia.org]
-match = 33.3%%
-title = Địa lý Đài Loan
-url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
+match = -14.3%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [trithucvn.co]
 match = -100.0%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -119.0%%
-title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
-url = https://visana.vn/visa-quan-hong-dai-loan/
+match = -114.3%%
+title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
+url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
 match = -19.0%%
