--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-30 02:21:59
+lastsearch = 2024-07-30 05:50:22
 
 [tiki.vn]
 match = 16.0%%
@@ -42,14 +42,14 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -96.0%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=pp6aAAAAIAAJ&pg=RA3-PA70&lpg=RA3-PA70&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=6evoML2Xop&sig=ACfU3U2YvehvYupHeW9fCHyJ-vzytbutnw&hl=en&sa=X&ved=2ahUKEwjpoJqz_MyHAxWWGFkFHfl3Gv0Q6AF6BAgVEAM
+match = -92.0%%
+title = Sự phát triển của Thế giới Factbook 2018 bằng tiếng Việt: ...
+url = https://books.google.com/books?id=Nj1NDwAAQBAJ&pg=PT2108&lpg=PT2108&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=2q-txqVyT7&sig=ACfU3U0nFk6MB35EtoeO3KHCNKXX-vHHnA&hl=en&sa=X&ved=2ahUKEwj1uKf9qs2HAxUKlYkEHeYrHJQQ6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
-match = -52.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Đà Nẵng
-url = https://www.skyscanner.com.vn/routes/tpe/dad/taipei-taiwan-taoyuan-to-đa-nang.html
+match = -60.0%%
+title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
 
 [www.bestprice.vn]
 match = -80.0%%
