--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-30 01:30:34
+lastsearch = 2024-07-30 05:50:01
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
-match = 70.0%%
-title = Chiếu nhựa Hà Nội các cỡ
-url = https://shopee.vn/Chiếu-nhựa-Hà-Nội-các-cỡ-i.236527859.6960486970
+match = -35.0%%
+title = chiếu nhựa giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu nhựa
 
 [tchome.vn]
 match = 20.0%%
