--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-30 04:52:01
+lastsearch = 2024-07-30 05:49:17
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -49,7 +49,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html?srsltid=Af
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOorFH2zTqJ8UeSs_ei7KulcdzPTCX8cwYIFYzyTEcEUF_1bXCLwf
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
