--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-30 02:45:43
+lastsearch = 2024-07-30 05:51:45
 
 [www.lazada.vn]
 match = -94.4%%
@@ -32,9 +32,9 @@ title = Cách bảo quản nem chua tại nhà
 url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [www.facebook.com]
-match = -155.6%%
-title = Vietnamese Community of Oregon - VNCO.org | Portland OR
-url = https://www.facebook.com/vncousa/
+match = -150.0%%
+title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
+url = https://www.facebook.com/sieuthinem267/
 
 [voz.vn]
 match = 11.1%%
