CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-30 02:27:25
+lastsearch = 2024-07-30 06:12:28
 
 [www.muji.com]
 match = 7.1%%
@@ -102,9 +102,9 @@ title = Chăn Lông Muji
 url = https://www.tiktok.com/discover/Chăn-lông-muji
 
 [www.lazada.vn]
-match = -62.5%%
-title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+match = -28.6%%
+title = Muji Chăn Lông Nhung Xám Mỏng
+url = https://www.lazada.vn/products/muji-chan-long-nhung-xam-mong-i1954195333.html
 
 [sugoimart.com]
 match = -257.1%%
