--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-30 02:47:45
+lastsearch = 2024-07-30 06:12:06
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -28,8 +28,8 @@ url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
 match = -35.5%%
-title = Nệm cao su thiên nhiên 1m8x2mx10cm chỉ 7.688.000đ. ...
-url = https://demxinh.vn/dem-cao-su/
+title = Đệm lò xo Canada Bencivenni (New) - bảo hành 15 năm
+url = https://demxinh.vn/dem-lo-xo-canada-bencivenni-new.html
 
 [dongahome.vn]
 match = 3.2%%
