CI images update

--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-30 02:24:14
+lastsearch = 2024-07-30 06:28:22
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,19 +12,19 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = 17.9%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
+match = -21.4%%
+title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
+url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html?srsltid=AfmBOopJtNkyt95AjscPwg5Twjt1eq8qJq45bkgUVDHpk9zc_qWP7Pgp
+match = -17.9%%
+title = Bộ chun chần WarmDream 160x200 lụa - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-160x200-lua.html
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOoqankyKEs2VOug8V4wlYhvtFABikbIi8Z0WvXNzWpEYq5ovmuFe
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
 
 [everonminhkhai.com]
 match = -26.7%%
