--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-30 05:50:22
+lastsearch = 2024-07-30 06:34:41
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = 0.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -80.0%%
+title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
+url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
 match = -28.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -92.0%%
-title = Sự phát triển của Thế giới Factbook 2018 bằng tiếng Việt: ...
-url = https://books.google.com/books?id=Nj1NDwAAQBAJ&pg=PT2108&lpg=PT2108&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=2q-txqVyT7&sig=ACfU3U0nFk6MB35EtoeO3KHCNKXX-vHHnA&hl=en&sa=X&ved=2ahUKEwj1uKf9qs2HAxUKlYkEHeYrHJQQ6AF6BAgZEAM
+match = 12.0%%
+title = Quốc triều chính biên toát yếu
+url = https://books.google.com/books?id=Mm3W8DYq3t4C&pg=PA195&lpg=PA195&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Z0gE5_O_0W&sig=ACfU3U3bulwCtGucffSv9htf5fhj5uHcUA&hl=en&sa=X&ved=2ahUKEwjT_5nxtM2HAxXtGEQIHSfyIpMQ6AF6BAgXEAM
 
 [www.skyscanner.com.vn]
 match = -60.0%%
