--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-30 01:46:13
+lastsearch = 2024-07-30 06:27:37
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -188.2%%
-title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
-url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
+match = -205.9%%
+title = If an HOA in state does not enforce its rules for a certain ...
+url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -200.0%%
-title = My neighbor is constantly doing things that violate our HOA ...
-url = https://www.quora.com/My-neighbor-is-constantly-doing-things-that-violate-our-HOA-agreement-what-can-I-do
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [www.hopb.co]
 match = -141.2%%
