--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-30 04:49:13
+lastsearch = 2024-07-30 06:29:03
 
 [www.tiktok.com]
 match = -82.4%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnhk52iR&sig=ACfU3U0ogjx-0TMNX86wl-B50Z8i9RMRmA&hl=en&sa=X&ved=2ahUKEwihhLvg_syHAxWLF1kFHRJREOIQ6AF6BAhCEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ6yxEE50&sig=ACfU3U1t3c-dFBGMDIgz_iNBYxHDzn5lEA&hl=en&sa=X&ved=2ahUKEwi3z-nPs82HAxVNLkQIHYysLMUQ6AF6BAggEAM
 
 [tax.vermont.gov]
 match = -29.4%%
