--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-30 02:35:39
+lastsearch = 2024-07-30 06:30:28
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
-match = -209.1%%
-title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
-url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
+match = -372.7%%
+title = Bọc ghế da Simili ô tô hàng chất lượng | Giá tốt, trả góp 0%%
+url = https://chungauto.vn/boc-ghe-da-simili-cho-oto-p996.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
+match = -254.5%%
+title = SG939 | Ghế xoay da | Ghế trưởng phòng Hòa Phát
+url = https://noithathoaphat.com/ghe-xoay-da-sg939
 
 [dandoxe.com]
 match = -154.5%%
@@ -132,9 +132,9 @@ title = Ghế da văn phòng
 url = https://noithatthienminh.vn/ghe-da-van-phong/
 
 [akauto.com.vn]
-match = -336.4%%
-title = Bọc nệm ghế da xe Fiesta HCM |Tăng thẩm mỹ - Trải nghiệm
-url = https://akauto.com.vn/boc-ghe-da-cho-fiesta
+match = -372.7%%
+title = Bọc ghế da ô tô Kia Morning Cao Cấp - Mẫu mới đẹp - Giá tốt
+url = https://akauto.com.vn/boc-ghe-da-o-to-kia-morning
 
 [www.theguardian.com]
 match = -254.5%%
