--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-30 06:28:22
+lastsearch = 2024-07-30 06:46:31
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = -17.9%%
-title = Bộ chun chần WarmDream 160x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-160x200-lua.html
+match = 3.6%%
+title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 
 [demxanh.com]
 match = -32.1%%
@@ -38,8 +38,8 @@ url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22052
-url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc52
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc62
 
 [songhong.info]
 match = -53.6%%
