CI images update

--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-30 06:17:34
+lastsearch = 2024-07-30 09:10:24
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -22,9 +22,9 @@ title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
 url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
 
 [khodem.vn]
-match = 24.0%%
-title = Chăn ga gối đệm khách sạn
-url = https://khodem.vn/chan-ga-goi-dem-khach-san/
+match = 8.0%%
+title = Chăn ga gối khách sạn - Kho đệm
+url = https://khodem.vn/chan-ga-goi-khach-san/
 
 [songhonghanoi.vn]
 match = -72.0%%
