--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-30 05:44:08
+lastsearch = 2024-07-30 09:06:55
 
 [demxanh.com]
-match = -24.1%%
-title = Những kiến thức cần biết về chăn ga gối lụa gấm
-url = https://demxanh.com/nhung-kien-thuc-can-biet-ve-chan-ga-goi-lua-gam.html?srsltid=AfmBOopePaZiXykbis6VOkFu8IVbRjrTc5MDKcvHz8NYkcUbJ5xMqZI_
+match = 28.0%%
+title = Chăn ga gối Singapore lụa
+url = https://demxanh.com/chan-ga-goi-singapore-lua.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = 51.7%%
-title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
+match = -17.2%%
+title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
 
 [changagoinemgiasi.com]
 match = 3.4%%
