--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-30 02:40:29
+lastsearch = 2024-07-30 09:07:59
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -3.2%%
+title = Chọn màu sắc chăn ga gối đệm hợp phong thủy vợ chồng
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-vo-chong-1469.html
 
 [demxanh.com]
-match = 58.1%%
-title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
+match = 63.3%%
+title = Bộ chăn ga gối lụa 6 món L6M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 203
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
+title = Bộ chăn ga gối SH_UT23 032
+url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -22.6%%
-title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
-url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
+match = -19.4%%
+title = Top 10+ bộ chăn ga gối Sông Hồng chính hãng giá tốt, được ...
+url = https://changagoidemsonghong.online/top-10-bo-chan-ga-goi-song-hong-chinh-hang-gia-tot-duoc-yeu-thich.html
 
 [www.facebook.com]
 match = -6.5%%
@@ -112,9 +112,9 @@ title = COZINO|Bộ chăn ga gối Lụa satin cao cấp CZN 18-Họa tiết ...
 url = https://cozino.vn/do-dung-gia-dinh/bo-chan-ga-goi-lua-satin-cao-cap-czn-18-hoa-tiet-theu-hoa-day/
 
 [songhong.info]
-match = -9.7%%
-title = Chăn ga gối Walt Disney chính hãng Sông Hồng sản xuất
-url = https://songhong.info/chan-ga-goi-walt-disney
+match = -6.5%%
+title = Mẫu sản phẩm chăn ga gối Sông Hồng WaltDisney YC20003
+url = https://songhong.info/chan-ga-goi-yc20003
 
 [dodungnoithat.vn]
 match = -6.5%%
