--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-30 01:44:24
+lastsearch = 2024-07-30 09:07:38
 
 [tiki.vn]
 match = -138.9%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
-match = -144.4%%
-title = Bộ Chăn Drap Gối Cao Cấp Bọc Màu Thêu (vỏ chăn) – Xám
-url = http://nemxinh.net/bo-chan-drap-goi-cao-cap-boc-mau-theu-vo-chan-xam-p67.html
+match = 50.0%%
+title = Kích thước 160x200
+url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
 match = -188.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh ngọc
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Melody M214 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-melody-m214
+match = -66.7%%
+title = Bộ ga phủ Passion A112 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a112
 
 [aeoneshop.com]
 match = -105.6%%
