--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-30 06:27:59
+lastsearch = 2024-07-30 09:04:10
 
 [www.youtube.com]
 match = -80.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOordBs40vwgZpyhqLUq6AgBTA40IT4B2TTDqbmh8Cjv0uf1fw5ut
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
