--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-30 04:15:34
+lastsearch = 2024-07-30 09:06:34
 
 [sieuthidemonline.vn]
-match = -19.0%%
-title = Nệm lò xo Techwood cao cấp giá rẻ tại Hà Nội
-url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/attachment/dem-lo-xo-techwood/
+match = -66.7%%
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [tuananh.vn]
 match = 52.4%%
@@ -24,12 +24,12 @@ url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 [demxanh.com]
 match = -95.2%%
 title = Bảng giá đệm lò xo Tuấn Anh khuyến mãi mới nhất năm ...
-url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html
+url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html?srsltid=AfmBOopo90-sFhipmX0s3z5CnK9J6KrtjyQFnym1u_9O6-gzO1zN6Hhs
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOorGQWW7OisTP2vqGH0pqTkTrVNx4t-9bERUhkHfH9rmxKPq2M8j
 
 [shopee.vn]
 match = -61.9%%
