--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-07-29 23:42:33
+lastsearch = 2024-07-30 09:14:50
 
 [shope.io.vn]
 match = -59.3%%
@@ -14,7 +14,7 @@ url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-ho
 [www.diepxuan.com]
 match = 29.6%%
 title = Ruột gối kê WDR lông vũ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html?srsltid=AfmBOoo0rDqsGivII8hodVsOzE3tY2XQsrJfcTMubfHbrc4hVEC1rsXq
+url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html
 
 [giasale.com]
 match = -59.3%%
