--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-30 01:16:48
+lastsearch = 2024-07-30 09:10:46
 
 [shopee.vn]
 match = -8.3%%
@@ -82,8 +82,8 @@ title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
 
 [sieuthinguyenkim.com]
-match = -29.2%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau ...
+match = -62.5%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
