--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-30 01:22:43
+lastsearch = 2024-07-30 09:14:09
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 11.1%%
-title = Marina Sirota, PhD
-url = https://profiles.ucsf.edu/marina.sirota
+match = -5.0%%
+title = Frank McCormick, PhD, FRS
+url = https://profiles.ucsf.edu/frank.mccormick
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
