--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-30 05:44:52
+lastsearch = 2024-07-30 10:26:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -29,7 +29,7 @@ url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 [demxanh.com]
 match = 14.3%%
 title = Bộ ga gối chun chần xơ đậu nành mã 16 Lá tre voi
-url = https://demxanh.com/bo-ga-goi-chun-chan-xo-dau-nanh-ma-16-la-tre-voi.html?srsltid=AfmBOorRsuIMCOO7aF2dA5K-Yy25K5Kdl5L-2BSpnTFckXKSwI6Dxvka
+url = https://demxanh.com/bo-ga-goi-chun-chan-xo-dau-nanh-ma-16-la-tre-voi.html
 
 [thegioinem.com]
 match = 17.9%%
