--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-30 04:18:42
+lastsearch = 2024-07-30 10:18:15
 
 [shopee.vn]
-match = -37.5%%
-title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
-url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
+match = -41.7%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = 29.2%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOorVL3qYSjt_erRxzFUQfqEMr9KI5SMhoxHeXmGwo6dIeGWWwujV
 
 [goni.vn]
 match = 4.2%%
@@ -29,7 +29,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demluxury.com.vn]
 match = -8.3%%
 title = Chiếu mát, chiếu điều hòa cao cấp Luxury Home
-url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/
+url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/?srsltid=AfmBOooy6CO3p434X3q_rCSOmGSSoNdp-hxj1G9N3nnd-ctfnvkvl19G
 
 [kyoryo.vn]
 match = -58.3%%
@@ -175,4 +175,9 @@ url = https://trandungmart.vn/bo-chieu-dieu-hoa-cao-su-non-boc-chun-chon-mau-san
 match = 0.0%%
 title = Chiếu điều hòa mây muji Nhật Bản - Faly.vn
 url = http://faly.vn/chieu-dieu-hoa-may-muji-nhat-ban.html
+
+[khonemtonghop.com]
+match = -45.8%%
+title = Chiếu Điều Hòa Là Gì? TOP 4 Chiếu Điều Hòa Hot Nhất ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-la-gi/
 
