--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-29 22:46:21
+lastsearch = 2024-07-30 10:17:34
 
 [www.everonvn.vn]
-match = -110.0%%
-title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
+match = 20.0%%
+title = Đệm bông Everon 1m, 1m2, 1m4
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
 
 [everon.vip]
 match = 50.0%%
@@ -17,9 +17,9 @@ title = Nệm Everon Ceramic
 url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
-match = 20.0%%
-title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+match = -75.0%%
+title = Đệm Bông Ép Everon 1200x1900 Mua Cho Giường Đơn ...
+url = https://everonvn.com.vn/everon/1900/dem-bong-ep-everon-co-120x190
 
 [everonchinhhang.vn]
 match = -50.0%%
