--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-30 02:10:36
+lastsearch = 2024-07-30 10:24:51
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 4
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [decoviet.vn]
 match = 22.2%%
@@ -52,13 +52,13 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -90.9%%
-title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng, ...
-url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
+match = -59.1%%
+title = Thảm trải chân giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải chân giường
 
 [cafeland.vn]
-match = -109.1%%
-title = Kích thước giường ngủ chuẩn theo phong thủy - CafeLand.Vn
+match = -45.5%%
+title = Kích thước giường ngủ chuẩn theo phong thủy
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.everonvn.vn]
@@ -67,9 +67,9 @@ title = Đệm bông ép Everon 1m5 (1.5m) | Chính hãng, Giá tốt tại ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m5.html
 
 [shopee.vn]
-match = -109.1%%
-title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng ...
-url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
+match = -81.8%%
+title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN, SOFA ...
+url = https://shopee.vn/GIƯỜNG-SÔ-PHA-ĐA-NĂNG-THÔNG-MINH-GẤP-GỌN-SOFA-GIƯỜNG-GẤP-LẠI-THÀNH-GHẾ-i.795208755.19125639155
 
 [www.kymdan.com]
 match = -18.2%%
