--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-30 08:05:39
+lastsearch = 2024-07-30 10:28:21
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 40.9%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -92,9 +92,9 @@ title = Thảm phòng khách - Thảm trải sàn chất lượng, giá tốt
 url = https://comehome.com.vn/phu-kien/san-pham-det-may/tham.html
 
 [flexhouse.vn]
-match = -40.9%%
-title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
-url = https://flexhouse.vn/tham-trai-san-phong-ngu
+match = -9.1%%
+title = Thảm trải sàn chính hãng, giá tốt
+url = https://flexhouse.vn/tham-lot-san
 
 [decosy.com]
 match = -166.7%%
