--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-30 08:02:02
+lastsearch = 2024-07-30 10:26:57
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông Adaptive Fiber 3M
-url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
+match = -72.7%%
+title = Đệm bông ép
+url = https://tuananh.vn/dem-bong-ep-c51.html
 
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOorOPYZ6aEebWNUIPduVr5RxJ89FGHUxlaOKMA3kySh8sRiW-cLJ
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/tuananh.vn/videos/đệm-tuấn-anh-hướng-dẫ
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOooZeEQ0aY8Nm1E1A5diUQO8e1rPd98CtLBDmq4712SooOcyjBX0
 
 [m.facebook.com]
 match = -76.0%%
