--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-30 04:23:33
+lastsearch = 2024-07-30 10:26:13
 
 [www.diepxuan.com]
-match = -40.0%%
-title = Túi Tuấn Anh 180x200 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
+match = 26.3%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demkhangduy.com]
 match = -25.0%%
