--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-30 10:18:15
+lastsearch = 2024-07-30 10:49:04
 
 [shopee.vn]
 match = -41.7%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = 29.2%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOorVL3qYSjt_erRxzFUQfqEMr9KI5SMhoxHeXmGwo6dIeGWWwujV
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
@@ -29,7 +29,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demluxury.com.vn]
 match = -8.3%%
 title = Chiếu mát, chiếu điều hòa cao cấp Luxury Home
-url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/?srsltid=AfmBOooy6CO3p434X3q_rCSOmGSSoNdp-hxj1G9N3nnd-ctfnvkvl19G
+url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/
 
 [kyoryo.vn]
 match = -58.3%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = -20.8%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = 37.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [joliefam.vn]
 match = -37.5%%
