--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-30 06:29:03
+lastsearch = 2024-07-30 10:50:02
 
 [www.tiktok.com]
 match = -82.4%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -194.1%%
 title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ6yxEE50&sig=ACfU3U1t3c-dFBGMDIgz_iNBYxHDzn5lEA&hl=en&sa=X&ved=2ahUKEwi3z-nPs82HAxVNLkQIHYysLMUQ6AF6BAggEAM
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ6zpAB10&sig=ACfU3U366XkQvPp-QoOU7uiavtSpwnXYoA&hl=en&sa=X&ved=2ahUKEwi-pO_67c2HAxVjMlkFHZ3gFlwQ6AF6BAggEAM
 
 [tax.vermont.gov]
 match = -29.4%%
