--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-30 05:45:31
+lastsearch = 2024-07-30 10:55:18
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOorKY-fvZb_bGouJn3JlyquaXw2cRzcrsJJrtEQhxANkxWrjj_7J
 
 [everonthaiha.com]
 match = 35.3%%
@@ -17,9 +17,9 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -41.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
-url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
+match = -54.2%%
+title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
+url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
 
 [everon.online]
 match = -8.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 [www.lazada.vn]
 match = -66.7%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/
+url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOoqsln5GkiAAY5qL52TvM5n3CVyugLN09wgeMJ0e659qW8GOgjmd
 
 [www.everonvn.vn]
 match = -20.8%%
