CI images update

--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-30 05:47:33
+lastsearch = 2024-07-30 11:25:13
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = -233.3%%
@@ -232,9 +232,9 @@ title = Index of /assets/libs/tui-chart/maps
 url = https://www.dixondirectional.com/assets/libs/tui-chart/maps/
 
 [www.bloomberg.com]
-match = -150.0%%
-title = TUI1: TUI AG Stock Price Quote - Xetra
-url = https://www.bloomberg.com/quote/TUI1:GR
+match = -316.7%%
+title = Ryanair Nears TUI Travel Deal in Blow to Online 'Pirates'
+url = https://www.bloomberg.com/news/articles/2024-02-14/ryanair-nears-deal-with-tui-in-new-blow-to-online-pirates
 
 [www.tuj.ac.jp]
 match = -333.3%%
