--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-30 02:48:28
+lastsearch = 2024-07-30 11:28:17
 
 [www.diepxuan.com]
 match = -72.7%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp
 url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
-match = -68.2%%
-title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
-url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
+match = 13.6%%
+title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
+url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
 match = -18.2%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -36.4%%
-title = Phân phối các sản phẩm chăn ga gối lẻ ...
-url = https://demxanh.com/chan-ga-goi-le.html
+match = -50.0%%
+title = Chiếu cao su non Coco bo chun màu xanh dương
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-duong.html
 
 [www.tiktok.com]
 match = -127.3%%
