--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-30 10:34:19
+lastsearch = 2024-07-30 11:19:23
 
 [helloviettravel.com]
 match = -181.2%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = 12.5%%
-title = Bản tin Du lịch 18/7/2024
-url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
+match = -56.2%%
+title = Cảnh giác các chiêu lừa du lịch | VTV24
+url = https://www.youtube.com/watch?v=pr86lbZaxyw
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
