--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-07-30 09:55:27
+lastsearch = 2024-07-30 11:18:01
 
 [demxanh.com]
 match = -9.1%%
@@ -37,9 +37,9 @@ title = Review chiếu trúc hạt đen
 url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [shopee.vn]
-match = -42.4%%
-title = Mắt, hạt đan chiếu trúc chiếu tre rời, đủ size kích cỡ ( 500g) ...
-url = https://shopee.vn/Mắt-hạt-đan-chiếu-trúc-chiếu-tre-rời-đủ-size-kích-cỡ-(-500g)-anh-chị-đặt-vui-lòng-chọn-mẫu-hạt-số-mấy-như-hình-đầu.-i.50069469.25168839965
+match = -3.0%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [chieutrucxinh.weebly.com]
 match = -9.1%%
