--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-30 09:45:46
+lastsearch = 2024-07-30 11:31:47
 
 [xoptraisan.info]
-match = -147.4%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 26.3%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamaulac.com.vn]
 match = -31.6%%
@@ -42,9 +42,9 @@ title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
 url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
 
 [tiki.vn]
-match = -94.7%%
-title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
+match = -147.4%%
+title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
+url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-0-6cm-tam-mau-do-nhu-hinh-p74677637.html?spid=75099611&__s=ssdp
 
 [thamsami.com]
 match = -84.2%%
@@ -67,12 +67,22 @@ title = Thảm xốp một màu 60*60cm giá rẻ tại Hồ Chí Minh
 url = https://www.pinterest.com/pin/763993524284509627/
 
 [khovatlieusan.com]
-match = 46.7%%
-title = Thảm xốp vân gỗ
-url = https://khovatlieusan.com/tham-xop-van-go-916012.html
+match = 10.5%%
+title = THẢM XỐP MỘT MẦU - 60cmx60cm
+url = https://khovatlieusan.com/tham-xop-mot-mau-60cmx60cm-889616.html
 
 [www.lazada.vn]
-match = -131.6%%
-title = 15 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 40cm x ...
-url = https://www.lazada.vn/products/15-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-40cm-x-40cm-x-06cmtam-mau-do-do-nhu-hinh-i1054592403-s3602272936.html
+match = -126.3%%
+title = 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
+url = https://www.lazada.vn/products/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-06cmtam-mau-xam-sang-nhu-hinh-i1051678959-s3587446608.html
+
+[www.sendo.vn]
+match = -126.3%%
+title = 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
+url = https://www.sendo.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-0-6cmtam-mau-xam-sang-nhu-hinh-38742680.html
+
+[tayphuthuan.com]
+match = -31.6%%
+title = Tham xốp hình khồi 10 tam cho bé chơi
+url = http://tayphuthuan.com/san-pham/tham-cao-su-xop-hinh-khoi-326/
 
