--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-30 10:48:22
+lastsearch = 2024-07-30 11:25:32
 
 [thamaulac.com.vn]
-match = -38.9%%
-title = Thảm xốp ghép vân gỗ 60x60 cm màu sáng
-url = https://thamaulac.com.vn/san-pham/tham-xop-ghep-van-go-60x60-cm-mau-sang
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
 match = -172.2%%
