--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-30 10:46:38
+lastsearch = 2024-07-30 11:20:46
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -258.3%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [maritime-executive.com]
 match = -316.7%%
@@ -192,9 +192,9 @@ title = UFC Fight Night: Tuivasa vs Tybura
 url = https://www.ufc.com/event/ufc-fight-night-march-16-2024
 
 [www.thenaturaladventure.com]
-match = -325.0%%
-title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+match = -283.3%%
+title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.youtube.com]
 match = -141.7%%
@@ -377,9 +377,9 @@ title = TUI BLUE Barut Andız | Official Website
 url = https://barutblueandiz.otel.direct/mobile/index.aspx?Page=0&cur=KRW
 
 [www.tripadvisor.com]
-match = -275.0%%
-title = TUI customers beware - this is neither 5* nor Premium!
-url = https://www.tripadvisor.com/ShowUserReviews-g499445-d1163247-r941540096-Bahia_Principe_Luxury_Sian_Ka_an-Akumal_Yucatan_Peninsula.html
+match = -341.7%%
+title = TUI Day Trip to Lapland - Terrible Experience - Review of ...
+url = https://www.tripadvisor.com/ShowUserReviews-g189922-d202600-r731111468-SantaPark_the_Home_Cavern_of_Santa_Claus-Rovaniemi_Lapland.html
 
 [www.amazon.com]
 match = -283.3%%
