CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-30 03:26:27
+lastsearch = 2024-07-30 11:33:07
 
 [shopee.vn]
 match = 25.0%%
@@ -300,4 +300,9 @@ url = https://atpsoftware.vn/danh-sach-kho-shopee-express.html
 match = -225.0%%
 title = 'Biển người' tiếc thương vô hạn Nhà lãnh đạo đặc biệt xuất ...
 url = https://baotintuc.vn/thoi-su/le-quoc-tang-tong-bi-thu-nguyen-phu-trong-bien-nguoi-tiec-thuong-vo-han-nha-lanh-dao-dac-biet-xuat-sac-cua-dat-nuoc-20240726143749023.htm
+
+[vtv.vn]
+match = -131.2%%
+title = Hồng lâu mộng phiên bản mới gặp trở ngại nào?
+url = https://vtv.vn/van-hoa-giai-tri/hong-lau-mong-phien-ban-moi-gap-tro-ngai-nao-20240727174901232.htm
 
