--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-29 23:58:09
+lastsearch = 2024-07-30 11:35:55
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -21.4%%
-title = 12.12: The Day
-url = https://en.wikipedia.org/wiki/12.12:_The_Day
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -160.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -165.0%%
-title = dat yrndj 2k diss was cold too wit bruce nd nem | yrn dj 2k diss
-url = https://www.tiktok.com/@0eari/video/7361146964244778283
+match = -180.0%%
+title = Ai trying to replace prisons… seems like a bailout to me | prison
+url = https://www.tiktok.com/@youwontbelievemeofficial/video/7385302508224236842
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -90.0%%
-title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
-url = https://en.yna.co.kr/view/AEN20130109006800325
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = -145.0%%
@@ -395,4 +395,9 @@ url = https://www.cambridge.org/core/journals/european-political-science-review/
 match = -60.0%%
 title = FIDEL'S SISTER WARNED DOMINICANS OF REVOLT
 url = https://www.cia.gov/readingroom/document/cia-rdp67b00446r000500120025-7
+
+[twitter.com]
+match = -25.0%%
+title = Big Bad Bear (@BigBadBear_) / X
+url = https://twitter.com/bigbadbear_
 
