--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-30 10:51:48
+lastsearch = 2024-07-30 11:47:33
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/?srsltid=AfmBOoqtfKZkxVpNJqo1cAo46rcr8av5oaWePFbZpnSdxN7Rp51OV4xE
 
 [shopee.vn]
 match = -33.3%%
@@ -42,9 +42,9 @@ title = Đệm kích cỡ nào phù hợp cho giường đơn một người
 url = https://everonhanquoc.vn/tin-tuc/6128/dem-kich-co-nao-phu-hop-cho-giuong-don-mot-nguoi
 
 [flexhouse.vn]
-match = -104.8%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
-url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
+match = -42.9%%
+title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
+url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [everonvn.com.vn]
 match = -66.7%%
@@ -154,7 +154,7 @@ url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-d
 [noithatcaco.vn]
 match = -100.0%%
 title = 189+ Mẫu giường gỗ công nghiệp 1m4 đẹp, hiện đại, giá rẻ
-url = https://noithatcaco.vn/cam-nang-noi-that/giuong-go-cong-nghiep-1m4-830.html
+url = https://noithatcaco.vn/cam-nang-noi-that/giuong-go-cong-nghiep-1m4-830.html?srsltid=AfmBOop6cao4mTnwL_JWFBu-oNqZowAvrZKZUz1-0rmgcZJ-qcnYbEzs
 
 [dogohiephien.vn]
 match = -104.8%%
@@ -192,9 +192,9 @@ title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 14 | SMLIFE.vn
 url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
 
 [dienmaycholon.com]
-match = -95.2%%
-title = Giường 1.8M NOVARA L14Z-NZ Đen giá rẻ, giao ngay
-url = https://dienmaycholon.com/giuong/giuong-18m-novara-l14znz-den
+match = -76.2%%
+title = Giường 1.8M NOVARA L14Z-NZ giá rẻ, giao ngay
+url = https://dienmaycholon.com/giuong/giuong-18m-novara-l14znz?srsltid=AfmBOoqxF9RRJRgDU0Vy_kBbjrEzlzwi5rBYMQyC2adSaA5JmhJ6lV_f
 
 [govi.vn]
 match = 0.0%%
