--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-30 10:33:58
+lastsearch = 2024-07-30 11:47:12
 
 [chanrathanhthuy.com]
 match = 9.7%%
@@ -14,12 +14,12 @@ url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-go
 [demxanh.com]
 match = 58.1%%
 title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html?srsltid=AfmBOoqmsZFZwx8NhK9o1EWl3mdl4S0_v_4fxWxQcSfAw09a1yBhvlKs
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 53.8%%
-title = Bộ chăn ga gối SH_UC23 031
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-32
+match = 50.0%%
+title = Bộ chăn ga gối SH_UC24 107
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-107
 
 [changagoidemsonghong.com]
 match = -29.0%%
