--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-30 06:35:26
+lastsearch = 2024-07-30 11:42:07
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,9 +12,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = 30.4%%
-title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
+match = -60.9%%
+title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -22,9 +22,9 @@ title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
 url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = 17.4%%
-title = Chiếu cao bằng Việt Nam 1.2m x 1.95
-url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
+match = -69.6%%
+title = Chiếu trúc Cao Bằng loại một, có 5 loại kích thước 1,2m ...
+url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-loại-một-có-5-loại-kích-thước-1-2m-1m-0.9mvà-0.8m-i.17414239.2656259371
 
 [www.lazada.vn]
 match = 21.7%%
