--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-30 07:57:47
+lastsearch = 2024-07-30 11:36:56
 
 [shopee.vn]
-match = -666.7%%
-title = 1/4
-url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
+match = -78.3%%
+title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/cao bằng
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -33,8 +33,8 @@ url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=wat
 
 [chieutrucsaigon.com]
 match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [demxanh.com]
 match = -21.7%%
