--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-29 13:22:43
+lastsearch = 2024-07-30 11:46:30
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+match = -218.8%%
+title = Chiêu trò cùm nhíp chống sốc và thanh giằng cân bằng chống ...
+url = https://www.youtube.com/watch?v=wZdbzOkTME0
 
 [hawater.com.vn]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -8.3%%
-title = Mai Thanh Hạ
-url = https://www.facebook.com/maithanhha19/
+match = -168.8%%
+title = Khen Phim - Review phim chiếu rạp | K xem các phần ...
+url = https://www.facebook.com/groups/khenphim/posts/k-xem-các-phần-trước-có-giểu-dc-nội-dung-phim-này-k-mng-mình-xin-rv-phim-có-hay-/1779205792553570/
 
 [suckhoedoisong.vn]
 match = -225.0%%
