--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-30 06:36:48
+lastsearch = 2024-07-30 11:48:34
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html?srsltid=AfmBOoond2aIEl8z9U7UU_fIRLMtyrsmsKxI4hsw0lB8s01-FdVKRAPQ
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
 
 [www.diepxuan.com]
 match = 28.6%%
 title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html?srsltid=AfmBOopocWxTOu6PttKWBb4GZhMnTZGF6mffG3CAxg-i9ncYwhHpbM41
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -199,7 +199,7 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/?srsltid=AfmBOoqw4CEaa8qyqr0p-PbGmeIw8eZgQKsykCJcICRktWIu1q_Iqqkp
+url = https://diepxuan.com/
 
 [www.tripadvisor.com]
 match = -50.0%%
