--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-30 10:36:48
+lastsearch = 2024-07-30 11:41:24
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -27,8 +27,8 @@ title = Ao Dai Xanh Mint
 url = https://www.etsy.com/market/ao_dai_xanh_mint
 
 [www.evergreenrecreation.com]
-match = 0.0%%
-title = 
+match = -157.1%%
+title = ICE SKATING & HOCKEY | Evergreen Park and ...
 url = https://www.evergreenrecreation.com/224/Ice-Skating-Hockey
 
 [www.bbc.com]
@@ -52,9 +52,9 @@ title = Xiaomi Redmi Note 12 Turbo (Snapdragon 7+ Gen 2)
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-note-12-turbo-edition.html
 
 [www.youtube.com]
-match = -228.6%%
-title = [Review] TOP 16 Sữa tắm nước hoa bình dân HOT NHẤT ...
-url = https://www.youtube.com/watch?v=XsRwhD62NEA
+match = -142.9%%
+title = Arlo Parks - Green Eyes (Official Video)
+url = https://www.youtube.com/watch?v=ddjr5KDqYGA
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -112,9 +112,9 @@ title = GREEN TEA - Uses, Side Effects, and More
 url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Color blindness
-url = https://en.wikipedia.org/wiki/Color_blindness
+match = -18.2%%
+title = Ultraviolet
+url = https://en.wikipedia.org/wiki/Ultraviolet
 
 [www.yeastdriven.com]
 match = -114.3%%
@@ -222,9 +222,9 @@ title = Nam Định Khánh Hòa trực tiếp Vòng 19 V—League 2023
 url = https://www.puertoricanfestivalofma.org/forum/questions-answers/nam-dinh-khanh-hoa-truc-tiep-vong-19-v-league-2023-2024-nong-o-hang-day-va-vinh-25-thang-sau-2024
 
 [www.healthline.com]
-match = -200.0%%
-title = Broccoli 101: Nutrition Facts and Health Benefits
-url = https://www.healthline.com/nutrition/foods/broccoli
+match = -185.7%%
+title = How Blocking Blue Light at Night Helps You Sleep
+url = https://www.healthline.com/nutrition/block-blue-light-to-sleep-better
 
 [www.uscis.gov]
 match = -50.0%%
@@ -262,9 +262,9 @@ title =
 url = https://www.google.com/search?sca_esv=ec0ee542ba2d920f&q=What's+the+green+book+about?&sa=X&ved=2ahUKEwiSyuvVgJWHAxUAwBQJHX8KAh0QsZYEegQIFxAC
 
 [m.facebook.com]
-match = -250.0%%
-title = Blue Archive - [Rerun Pick-Up Recruitment Preview] A ...
-url = https://m.facebook.com/EN.BlueArchive/photos/rerun-pick-up-recruitment-previewa-rerun-pick-up-recruitment-will-begin-on-716-t/499332215946572/
+match = -128.6%%
+title = Blue Archive updated their cover photo.
+url = https://m.facebook.com/EN.BlueArchive/photos/d41d8cd9/510072298205897/
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
