--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 [everonvn.com.vn]
 match = 34.1%%
 title = Đệm Lò Xo Everon, King Koil 【 🥇Giảm 20%% 】HàngChính ...
-url = https://everonvn.com.vn/23/dem-lo-xo-everon
+url = https://everonvn.com.vn/23/dem-lo-xo-everon?srsltid=AfmBOop49Ln2y5p5QPFexcO5OdEqX5RJzKsLgjAD5Zo1xr3TNwwUvVIt
 
 [everonkorea.com]
 match = 7.3%%
