--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-30 09:05:52
+lastsearch = 2024-07-30 11:51:13
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,8 +92,8 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 10
+match = 20.0%%
+title = Chiếu lác D2 10 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -133.3%%
-title = Vitamin D2+K3 Lineabon tăng chiều cao cho bé
-url = https://shopee.vn/Vitamin-D2-K3-Lineabon-tăng-chiều-cao-cho-bé-i.230152250.24018506156
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -20.0%%
