--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-30 11:26:55
+lastsearch = 2024-07-30 11:53:37
 
 [demxanh.com]
-match = 26.3%%
-title = Chăn lông 5kg mã 02
-url = https://demxanh.com/chan-long-5kg-ma-02.html
+match = 34.8%%
+title = Chăn lông 5kg mã 06 chính hãng
+url = https://demxanh.com/chan-long-5kg-ma-06.html
 
 [shopee.vn]
 match = 43.5%%
@@ -47,9 +47,9 @@ title = Secured Home of nguyendang.com.vn
 url = https://nguyendang.com.vn/
 
 [www.vinmec.com]
-match = -65.2%%
-title = Siêu âm hình thái học là gì? Ý nghĩa và kết quả
-url = https://www.vinmec.com/vie/bai-viet/sieu-am-hinh-thai-hoc-la-gi-y-nghia-va-ket-qua-vi
+match = -91.3%%
+title = Chẩn đoán trước sinh: Chọc ối được thực hiện vào thời ...
+url = https://www.vinmec.com/vie/bai-viet/chan-doan-truoc-sinh-choc-oi-duoc-thuc-hien-vao-thoi-diem-nao-thi-tot-vi/
 
 [saigontourist.edu.vn]
 match = -26.1%%
@@ -112,9 +112,9 @@ title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80apbkdj.xn--p1ai/59682419zfe43a
 
 [www.tiktok.com]
-match = -60.9%%
-title = Usijali Sana My Ex Full Song Written in A Paper
-url = https://www.tiktok.com/discover/usijali-sana-my-ex-full-song-written-in-a-paper
+match = -17.4%%
+title = Lỗi Ko Tải Đc Dữ Liệu Vào Chận Ff
+url = https://www.tiktok.com/discover/lỗi-ko-tải-đc-dữ-liệu-vào-chận-ff
 
 [usth.edu.vn]
 match = -78.3%%
