--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-30 10:00:15
+lastsearch = 2024-07-30 11:48:50
 
 [vnexpress.net]
 match = -128.6%%
@@ -172,8 +172,8 @@ title = UBND TiNR TUYEN QUANG sO' VAN HOA, THE THAO VA ...
 url = http://sovhttdl.tuyenquang.gov.vn/media/files/2020/143ttr_1_2020091604340788688020200916043943729_Signed.pdf
 
 [www.ivivu.com]
-match = -114.3%%
-title = Du lịch gia đình: Gợi ý lịch trình khám phá Vũng Tàu 2 ...
+match = -100.0%%
+title = Gợi ý lịch trình du lịch Vũng Tàu 2 ngày 1 đêm dành cho ...
 url = https://www.ivivu.com/blog/2016/05/goi-y-lich-trinh-du-lich-vung-tau-2-ngay-1-dem-danh-cho-gia-dinh/
 
 [duongchung-ocvitbinhduong.com.vn]
