--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-30 10:20:59
+lastsearch = 2024-07-30 11:44:49
 
 [everonvn.com.vn]
-match = -171.4%%
-title = Bảng giá bộ chăn ga gối trẻ em Everon Trains họa tiết in đoàn ...
-url = https://everonvn.com.vn/everon/534/bo-tre-em-trains
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -66.7%%
